--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
@@ -2,12 +2,12 @@
 \begin{itemize}
     \item \textbf{amministratore non autenticato:} utente dell'applicazione web, persona munita di un account da amministratore, che deve ancora eseguire l'accesso;
     \item \textbf{amministratore autenticato:} utente dell'applicazione web, amministratore che pu\`{o} gestire gli utenti, le postazioni e le stanze;
-    \item \textbf{utente non autenticato:} utente dell'applicazione mobile, che deve ancora eseguire l'accesso;
-    \item \textbf{utente autenticato:} utente dell'applicazione mobile che ha eseguito l'accesso;
     \item \textbf{utente non registrato:} utente che non possiede un account nel sistema;
     \item \textbf{utente registrato:} utente che possiede un account nel sistema;
-    \item \textbf{utente:} utente che interagisce con l'applicazione;
-    \item \textbf{impiegato:} utente non amministratore;
-    \item \textbf{igienizzatore:} utente addetto esclusivamente all'igienizzazione delle postazioni/stanze;
-    \item \textbf{dipendente:} utente del personale dell'azienda.
+    \item \textbf{utente non autenticato:} utente registrato che deve ancora eseguire l'accesso dall'applicazione mobile;
+    \item \textbf{utente autenticato:} utente registrato, che ha eseguito l'accesso dall'applicazione mobile;
+    \item \textbf{utente:} utente registrato che interagisce con l'applicazione;
+    \item \textbf{impiegato:} utente registrato non amministratore;
+    \item \textbf{igienizzatore:} utente registrato addetto esclusivamente all'igienizzazione delle postazioni/stanze;
+    \item \textbf{dipendente:} utente registrato che fa parte dell'azienda.
 \end{itemize}
