--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[H]
   \centering
-    \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
+    \includegraphics[scale=0.80]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
   \caption{Creazione di una prenotazione}
 \end{figure}
 
@@ -22,7 +22,11 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \end{itemize}
 
 \subsection{UC-16 Creazione di una prenotazione}
-
+\begin{figure}[H]
+	\centering
+	  \includegraphics[scale=0.80]{src/CasiDUso/immagini/UC-gestionePrenotazione.png}\\
+	\caption{Creazione di una prenotazione}
+  \end{figure}
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
 \item \textbf{Descrizione:} l'attore vuole prenotare una postazione per una certa data od orario scelti;
@@ -138,7 +142,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Postcondizione:} la cancellazione non viene approvata e il personale interno auteneticato riceve un messaggio di errore auto-esplicativo;
 \item \textbf{Scenario principale:} il personale interno autenticato visualizza un messaggio di errore in cui viene informato che non è possibile cancellare una prenotazione per un orario passato.
 \end{itemize}
-
+\newpage
 \subsection{UC-19 Visualizzazione di una prenotazione}
 
 \begin{itemize}
