--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
@@ -1,15 +1,15 @@
 \newcommand{\Titolo}{Analisi Dei Requisiti}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Verificatori}{TODO \newline TODO}
-\newcommand{\Redattori}{TODO \newline TODO}
+\newcommand{\Verificatori}{Andrea De Tomasi \newline Giovanni Grigoretto \newline Elvis Murtezan}
+\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{X.X.X}
 
-\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline TODO \newline Sweleven }
+\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola informatica \newline Sweleven }
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{TODO}
+\newcommand{\DescrizioneDoc}{Lo scopo del documento è quello di descrivere in maniera dettagliata i requisiti e i casi d'uso che sono stati individuati durante lo studio del progetto \NomeProgetto.}
