--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -124,8 +124,8 @@
 
 % variabili - altro
 
-\newcommand{\Mail}{TODO}
-\newcommand{\proponente}{TODO}
+\newcommand{\Mail}{swegroup11@gmail.com}
+\newcommand{\proponente}{Imola Informatica}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
@@ -133,7 +133,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{TODO}
+\newcommand{\NomeProgetto}{BlockCOVID}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
@@ -188,6 +188,7 @@
 			\begin{large}
 				\textbf{Gruppo \Gruppo{}\ - Progetto \NomeProgetto{}}
 				\vspace{6pt}
+				\\
 				\Mail{}
 			\end{large}	  
 			
