--- a/DocumentiEsterni/AnalisiDeiRequisiti/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
 \usepackage{../../Shared/Sweleven}
 \usepackage{grffile}
+\usepackage{graphics}
 \usepackage{pdfpages}
 \input{./src/Comandi.tex}
 
@@ -24,19 +25,22 @@
 \section{Introduzione}\label{sec:Introduzione}
 \input{src/Introduzione/main.tex}
 
+\newpage
 \section{Descrizione generale}\label{sec:Descrizione-generale}
 \input{src/DescrizioneGenerale/main.tex}
 
+\newpage
 \section{Attori}\label{sec:Attori}
 \input{src/Attori/main.tex}
 
-\newpage
 \section{Casi d'uso}\label{sec:casi-d-uso}
 \input{src/CasiDUso/main.tex}
 
+\newpage
 \section{Requisiti}\label{sec:requisiti}
 \input{src/Requisiti/main.tex}
 
+\newpage
 \section{Tracciamento}\label{sec:tracciamento}
 \input{src/Tracciamento/main.tex}
 \end{document}
