--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-gestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-gestioneAutenticazione.tex
@@ -22,9 +22,9 @@
 	      \begin{enumerate}
 		      \item l'amministratore seleziona la funzionalità di inserimento di un nuovo utente;
 		      \item l'amministratore inserisce il nome dell'utente da registrare (UC-1.1 inserimento del nome di un nuovo utente non registrato);
-		      \item l'amministratore inserisce il cognome dell'utente da registrare(UC-1.2 inserimento del cognome di un nuovo utente non registrato);
-		      \item l'amministratore inserisce l'indirizzo e-mail con il quale il nuovo utente si autenticherà presso il sistema(UC-1.3 inserimento dell'indirizzo e-mail di un nuovo utente non registrato);
-		      \item l'amministratore invia i dati inseriti al sistema il quale invia, all'indirizzo e-mail precedentemente inserito, un link attraverso terminare la registrazione(UC-4 Creazione di una nuova password personale).
+		      \item l'amministratore inserisce il cognome dell'utente da registrare (UC-1.2 inserimento del cognome di un nuovo utente non registrato);
+		      \item l'amministratore inserisce l'indirizzo e-mail con il quale il nuovo utente si autenticherà presso il sistema (UC-1.3 inserimento dell'indirizzo e-mail di un nuovo utente non registrato);
+		      \item l'amministratore invia i dati inseriti al sistema il quale invia, all'indirizzo e-mail precedentemente inserito, un link attraverso il quale terminare la registrazione (UC-4 Creazione di una nuova password personale).
 	      \end{enumerate}
 \end{itemize}
 
@@ -92,14 +92,14 @@
 
 	\item \textbf{Estensioni:}
 	      \begin{enumerate}
-		      \item UC-3Visualizzazione dell'errore causato dall'inserimento di un indirizzo e-mail non valido durante la fase di registrazione.
+		      \item UC-3 Visualizzazione dell'errore causato dall'inserimento di un indirizzo e-mail non valido durante la fase di registrazione.
 	      \end{enumerate}
 \end{itemize}
 \subsection{UC-2 Visualizzazione dell'errore causato dall'inserimento di una stringa non valida per campi dati contenenti informazioni anagrafiche.}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
-	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché uno o entrambi i dati anagrafici(nome,cognome) inseriti non risultavano validi(es.ci sono numeri o caratteri speciali);
+	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché uno o entrambi i dati anagrafici (nome,cognome) inseriti non risultavano validi (es.ci sono numeri o caratteri speciali);
 
 	\item \textbf{Precondizioni:} l'amministratore ha inserito almeno un dato anagrafico non valido durante la registrazione e ha inviato i dati al sistema;
 
@@ -116,7 +116,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
-	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail risultava già censito(UC-3.1) o inadeguato ai criteri stabiliti per la creazione di un indirizzo e-mail(UC-3.2);
+	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail risultava già censito (UC-3.1) o inadeguato ai criteri stabiliti per la creazione di un indirizzo e-mail (UC-3.2);
 
 	\item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo e-mail non valido durante la registrazione e ha inviato i dati al sistema;
 
@@ -164,7 +164,7 @@
 
 \subsection{UC-4 Creazione di una nuova password personale}
 \begin{itemize}
-	\item \textbf{Attore primario:} utente (non registrato/registrato/autenticato/non autenticato);
+	\item \textbf{Attore primario:} utente (non registrato/non autenticato/autenticato);
 
 	\item \textbf{Descrizione:} l'utente vuole inserire una nuova password;
 
@@ -231,7 +231,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} utente;
 
-	\item\textbf{Descrizione:} l'utente vuole confermare la password inserita.Viene visualizzato un messaggio d'errore causato dall'inserimento di una password di conferma errata;
+	\item\textbf{Descrizione:} l'utente vuole confermare la password inserita. Viene visualizzato un messaggio d'errore causato dall'inserimento di una password di conferma errata;
 
 	\item\textbf{Precondizioni:} l'utente ha inserito una nuova password valida all'interno della pagina per l'inserimento di una nuova password e ha inserito una password di conferma diversa da quella inserita precedentemente;
 
@@ -240,7 +240,7 @@
 	\item \textbf{Scenario principale:}
 	      \begin{enumerate}
 		      \item l'utente inserisce la password precedentemente inserita;
-		      \item il sistema analizza il matching tra le due password e in caso di errore restituisce un messaggio d'errore esplicativo e richiede nuovamente l'inserimento di una nuova password senza precedentemente completare la modifica della password.
+		      \item il sistema analizza il matching tra le due password, in caso negativo restituisce un messaggio d'errore esplicativo e richiede nuovamente l'inserimento di una nuova password senza precedentemente completare la modifica della password.
 	      \end{enumerate}
 \end{itemize}
 \subsection{UC-7 Login tramite applicazione mobile}
@@ -261,11 +261,11 @@
 		      \item l'utente inserisce il proprio indirizzo e-mail con il quale si è registrato presso il sistema;
 		      \item l'utente inserisce la propria password;
 		      \item l'utente invia i dati al sistema;
-		      \item Il sistema elabora la richiesta e aggiorna la schermata del dispositivo con la dashboard personale qualora il login venga eseguito con successo. In caso contrario il sistema restituisce un messaggio d'errore esplicativo e non completa il login dell'utente.
+		      \item il sistema elabora la richiesta e aggiorna la schermata del dispositivo con la dashboard personale qualora il login venga eseguito con successo. In caso contrario il sistema restituisce un messaggio d'errore esplicativo e non completa il login dell'utente.
 	      \end{enumerate}
 	\item \textbf{Estensioni:}
 	      \begin{enumerate}
-		      \item UC-Visualizzazione di un messaggio d'errore a causa di un login errato.
+		      \item UC-9 Visualizzazione di un messaggio d'errore a causa di un login errato.
 	      \end{enumerate}
 \end{itemize}
 \subsection{UC-8 Login tramite applicazione web}
@@ -286,11 +286,11 @@
 		      \item l'amministratore inserisce il proprio indirizzo e-mail con il quale si è registrato presso il sistema;
 		      \item l'amministratore inserisce la propria password;
 		      \item l'amministratore invia i dati al sistema;
-		      \item Il sistema elabora la richiesta e aggiorna la schermata del dispositivo con la dashboard dell'amministratore qualora il login venga eseguito con successo. In caso contrario il sistema restituisce un messaggio d'errore esplicativo e non completa il login dell'amministratore.
+		      \item il sistema elabora la richiesta e aggiorna la schermata del dispositivo con la \glo{dashboard} dell'amministratore qualora il login venga eseguito con successo. In caso contrario il sistema restituisce un messaggio d'errore esplicativo e non completa il login dell'amministratore.
 	      \end{enumerate}
 	\item \textbf{Estensioni:}
 	      \begin{enumerate}
-		      \item UC-8Visualizzazione di un messaggio d'errore a causa di un login errato.
+		      \item UC-8 Visualizzazione di un messaggio d'errore a causa di un login errato.
 	      \end{enumerate}
 \end{itemize}
 \subsection{UC-9 Visualizzazione di un messaggio d'errore a causa di un login errato}
@@ -324,6 +324,6 @@
 
 	      \begin{enumerate}
 		      \item l'utente seleziona la funzionalità di logout;
-		      \item Il sistema elabora la richiesta e aggiorna la schermata riportandola a quella d'avvio dell'applicazione e rendendo indisponibile l'accesso alla propria dashboard fino a nuova autenticazione.
+		      \item il sistema elabora la richiesta e aggiorna la schermata riportandola a quella d'avvio dell'applicazione e rendendo indisponibile l'accesso alla propria dashboard fino a nuova autenticazione.
 	      \end{enumerate}
 \end{itemize}
