--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
@@ -11,7 +11,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
 \item \textbf{Descrizione:} l’utente può gestire le stanze e postazioni registrate nell’applicazione a cui ha accesso a livello di permessi, marcando come igienizzate o disabilitando le relative postazioni o intere stanze;
-\item \textbf{Precondizione:} l'utente è autenticato, e naviga nell’apposita sezione di gestione delle postazioni o stanze;
+\item \textbf{Precondizione:} l'utente è autenticato, naviga nell’apposita sezione di gestione delle postazioni o stanze;
 \item \textbf{Postcondizione:} l’utente ha gestito le proprie postazioni o stanze;
 \item \textbf{Scenario principale:} 
 	\begin{itemize}
