--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
@@ -1,10 +1,10 @@
 \subsection{UC-24 Aggiunta postazione}
 \begin{itemize}
-    \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili eventualmente aggiungendo la postazione ad una stanza;
-    \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di gestione delle postazioni nell'applicazione web;
-    \item \textbf{post-condizioni:} una nuova postazione \`{e} stata aggiunta alla lista di postazioni disponibili;
-    \item \textbf{flusso degli eventi principali:}
+    \item \textbf{Attori:} amministratore autenticato;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili eventualmente aggiungendo la postazione ad una stanza;
+    \item \textbf{Precondizione:} l'amministratore autenticato si trova nella pagina di gestione delle postazioni nell'applicazione web;
+    \item \textbf{Postcondizione:} una nuova postazione \`{e} stata aggiunta alla lista di postazioni disponibili;
+    \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore inserisce le informazioni riguardanti la postazione da aggiungere;
         \item l'amministratore conferma le informazioni inserite e le salva nel sistema.
@@ -14,14 +14,14 @@
 
 \subsection{UC-25 Disabilitazione postazione}
 \begin{itemize}
-    \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{descrizione:} un amministratore pu\`{o} disabilitare una postazione, rendendola non prenotabile. Tutte le prenotazioni per quella postazione vengono cancellate.
-    \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
-    \item \textbf{post-condizioni:} la postazione \`{e} disabilitata e non pi\`{u} prenotabile, inoltre tutte le prenotazioni future per quella postazione sono annullate;
-    \item \textbf{flusso degli eventi principali:}
+    \item \textbf{Attori:} amministratore autenticato;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} disabilitare una postazione, rendendola non prenotabile. Tutte le prenotazioni per quella postazione vengono cancellate;
+    \item \textbf{Precondizione:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
+    \item \textbf{Postcondizione:} la postazione \`{e} disabilitata e non pi\`{u} prenotabile, inoltre tutte le prenotazioni future per quella postazione sono annullate;
+    \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore disabilita la postazione;
-        \item la postazione non \`{e} pi`{u} prenotabile;
+        \item la postazione non \`{e} più prenotabile;
         \item le prenotazioni della postazione sono annullate.
     \end{itemize}
 \end{itemize}
@@ -29,14 +29,14 @@
 
 \subsection{UC-26 Rimozione postazione}
 \begin{itemize}
-    \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{descrizione:} un amministratore pu\`{o} rimuovere una postazione dalla lista di postazioni disponibili.
-    \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
-    \item \textbf{post-condizioni:} la postazione \`{e} eliminata e non pi\`{u} prenotabile, inoltre vengono eliminate e  tutte le prenotazione per la postazione sono annullate;
-    \item \textbf{flusso degli eventi principali:}
+    \item \textbf{Attori:} amministratore autenticato;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} rimuovere una postazione dalla lista di postazioni disponibili;
+    \item \textbf{Precondizione:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
+    \item \textbf{Postcondizione:} la postazione \`{e} eliminata e non più prenotabile, inoltre vengono eliminate le relative prenotazioni;
+    \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore rimuove la stanza;
-        \item le postazioni della stanza non sono pi`{u} prenotabili;
+        \item le postazioni della stanza non sono pi\`{u} prenotabili;
         \item le prenotazioni delle postazioni della stanza sono annullate.
     \end{itemize}
 \end{itemize}
@@ -44,11 +44,11 @@
 
 \subsection{UC-27 Visualizzazione storico postazione}
 \begin{itemize}
-    \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{descrizione:} un amministratore pu\`{o} visualizzare lo storico degli utilizzi e delle pulizie della postazione con specificazione dell'utente che ha compiuto ogni azione.
-    \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
-    \item \textbf{post-condizioni:} l'amministratore visualizza lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
-    \item \textbf{flusso degli eventi principali:}
+    \item \textbf{Attori:} amministratore autenticato;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare lo storico degli utilizzi e delle pulizie della postazione con specificazione dell'utente che ha compiuto ogni azione;
+    \item \textbf{Precondizione:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
+    \item \textbf{Postcondizione:} l'amministratore visualizza lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
+    \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore visualizza le informazioni della postazione.
     \end{itemize}
@@ -58,11 +58,11 @@
 
 \subsection{UC-28 Scarica report postazione}
 \begin{itemize}
-    \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{descrizione:} un amministratore pu\`{o} scaricare un report che sommarizza l'utilizzo della postazione.
-    \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
-    \item \textbf{post-condizioni:} l'amministratore scarica un report in cui \`{e} possibile consultare lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
-    \item \textbf{flusso degli eventi principali:}
+    \item \textbf{Attori:} amministratore autenticato;
+    \item \textbf{Descrizione:} un amministratore pu\`{o} scaricare un report che sommarizza l'utilizzo della postazione;
+    \item \textbf{Precondizione:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
+    \item \textbf{Postcondizione:} l'amministratore scarica un report in cui \`{e} possibile consultare lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
+    \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore visualizza il report contenente le informazioni della postazione.
     \end{itemize}
