--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
@@ -5,19 +5,18 @@ Questo documento ha lo scopo di presentare un'analisi dei requisiti e dei casi d
 La pandemia COVID-19 sta ancora scuotendo la salute pubblica globale con un elevato numero di decessi e
 una vasta diffusione geografica. Rispetto ad altri patogeni implicati in recenti pandemie, il SARS-CoV-2 si
 distingue per la sua rapida diffusione e le modalità di contagio fra le persone.
-In accordo con il Governo, il 14 marzo 2020 sindacati e imprese hanno firmato un protocollo per tutelare la
+In accordo con il Governo, il 14 marzo 2020, sindacati e imprese hanno firmato un protocollo per tutelare la
 salute e la sicurezza dei lavoratori dal rischio contagio e garantire la salubrità dell’ambiente di lavoro. In
 particolare, le aziende devono assicurare pulizia giornaliera e sanificazione periodica dei locali, degli
 ambienti, delle postazioni di lavoro e delle aree comuni e di svago. In caso di contagio di un lavoratore in
-occasione di lavoro, il datore di lavoro può essere chiamato a rispondere in sede penale di lesioni penali
-colpose e omicidio colposo, qualora non avesse messo in atto tutte le misure utili a contrastare tale
+occasione di lavoro, il datore di lavoro può essere chiamato a rispondere in sede penale di lesione o omicidio colposo, qualora non avesse messo in atto tutte le misure utili a contrastare tale
 avvenimento.
 
 Nello specifico, in questo progetto si prendono in considerazione due casi di studio per individuare possibili
 risposte agli obblighi normativi:
 \begin{itemize}
     \item tracciamento immutabile e certificato delle presenze in tempo reale alle postazioni di lavoro di un
-    laboratorio informatico, contrassegnate tramite dei tag RFID (al momento le presenze alle postazioni
+    laboratorio informatico, contrassegnate tramite dei tag \glo{RFID} (al momento le presenze alle postazioni
     non vengono gestite e tutte le postazioni vengono sanificate indistintamente a fine giornata)
     \item tracciamento immutabile e certificato della pulizia delle postazioni (sia effettuata da azienda
     specializzata, che quella fatta in autonomia da uno studente/dipendente tramite apposito kit di
@@ -31,14 +30,12 @@ Nel documento sono presenti alcuni termini marcati in corsivo con una \emph{G} a
 \begin{itemize}
     \item presentazione capitolato C1:
     \begin{itemize} 
-        \item https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf
-        \item \begin{verbatim}https://www.youtube.com/watch?v=X_KintgpWc8&feature=youtu.be\end{verbatim}
+        \item \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf}
+        \item \url{https://www.youtube.com/watch?v=X_KintgpWc8&feature=youtu.be}
     \end{itemize}
-    \item materiale didattico presentato a lezione durante il corso di Ingegneria del Software: https://www.math.unipd.it/~tullio/IS-1/2020/
-    \item ISO/IEC/IEEE 12207:1995: \begin{verbatim}https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207 1995.pdf\end{verbatim}
-    \item IEEE Std 830 1998: \begin{verbatim}https://ieeexplore.ieee.org/document/720574\end{verbatim}
-    \item incontri con il proponente: 
-    \begin{itemize}
-        \item TODO: citare verbale
-    \end{itemize}
+    \item materiale didattico presentato a lezione durante il corso di Ingegneria del Software: \url{https://www.math.unipd.it/~tullio/IS-1/2020/}
+    \item ISO/IEC/IEEE 12207:1995: \url{https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207 1995.pdf}
+    \item IEEE Std 830 1998: \url{https://ieeexplore.ieee.org/document/720574}
+    \item incontro con il proponente verbalizzato il 18-12-2020.
+    \item \textbf{\NdP} \textbf{v1.0.0}
 \end{itemize}
