edit registro modifidche

--- a/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
@@ -13,8 +13,12 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        1.0.0                  & 2021-01-5                                      & Approvazione documento         & Elvis Murtezan & \responsabile{} \\
+        
+        0.3.0                  & 2021-01-4                                       & Verifica completa documento    & AbdelWahad Kandoul & \verificatore{} \\
+        
+        0.2.0                  & 2021-01-4                                       & Verifica completa documento   & Andrea De Tomasi & \verificatore{}    \\
+        
+        0.1.0                  & 2020-12-22                                       & Verifica completa documento        & Giovanni Grigoretto & \verificatore{}    \\
     \end{longtable}
 }
