--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -57,7 +57,7 @@
         {Andrea De Tomasi} & 1187099 & {andrea.detomasi@studenti.unipd.it}\\    
         {Alessio Trevisan} & 1187399 & {alessio.trevisan@studenti.unipd.it}\\    
         {Abdelwahad Kandoul} & 1120176 & {abdelwahad.kandoul@studenti.unipd.it} \\    
-        {Filippo Pinton} & 1xxxxxx & {filippo.pinton@studenti.unipd.it}\\    
+        {Filippo Pinton} & 1187361 & {filippo.pinton@studenti.unipd.it}\\    
         {Edoardo Caregnato} & 1096077 & {edoardo.caregnato@studenti.unipd.it}\\       
 	\end{longtable}
 }
