--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
@@ -1,3 +1,4 @@
+\newpage
 \subsection{Progettazione}
 
 \subsubsection{Divisione oraria}
@@ -29,7 +30,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 
 		
 \end{longtable}
-La suddivisione delle ore preventivate viene rapresentato anche sottoforma del seguente istogramma:
+La suddivisione delle ore preventivate viene rappresentata anche sottoforma del seguente istogramma:
 \begin{center}
 	\pgfplotsset{width=17cm, height=8.5cm}
 	\begin{tikzpicture}
