--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -22,7 +22,7 @@
         0.0.2  & 
         2021-01-08 & 
         Verifica & 
-        Abdelwahad kandoul, Edoardo Caregnato & 
+        Abdelwahad Kandoul, Edoardo Caregnato & 
         \verificatore{} \\
         
         0.0.1  & 
