--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
@@ -1,4 +1,4 @@
-Da qui in poi si entra nella parte più specifica di costruzione del sistema. Per avviare lo sviluppo questo stadio prosegue ed approfondisce la \glo{fase} di progettazione al dettaglio ed inzia quella di codifica. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
+Da qui in poi si entra nella parte più specifica di costruzione del sistema. Per avviare lo sviluppo questo stadio prosegue ed approfondisce la \glo{fase} di progettazione al dettaglio ed inzia quella di codifica. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, ovvero la Revisione di Progettazione, in vista dell'incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         1 febbraio 2021 - 1 marzo 2021;
