--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
@@ -24,7 +24,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \subsection{UC-16 Creazione di una prenotazione}
 \begin{figure}[H]
 	\centering
-	  \includegraphics[scale=0.80]{src/CasiDUso/immagini/UC-gestionePrenotazione.png}\\
+	  \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-gestionePrenotazione.png}\\
 	\caption{Creazione di una prenotazione}
   \end{figure}
 \begin{itemize}
@@ -135,7 +135,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC-18.1 Visualizzazione errore di cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
+\subsubsection{UC-19 Visualizzazione errore di cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
 \item \textbf{Precondizione:} il personale interno autenticato sta cercando di cancellare una prenotazione già usufruita in un orario passato;
@@ -143,8 +143,8 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Scenario principale:} il personale interno autenticato visualizza un messaggio di errore in cui viene informato che non è possibile cancellare una prenotazione per un orario passato.
 \end{itemize}
 \newpage
-\subsection{UC-19 Visualizzazione di una prenotazione}
 
+\subsection{UC-20 Visualizzazione di una prenotazione}
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
 \item \textbf{Descrizione:} l'attore vuole visualizzare le sue prenotazioni attive nel sistema;
