--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{../../Shared/Sweleven}
 \usepackage{csquotes}
+\usepackage{hyperref}
 \usepackage{graphicx}
 \input{./src/Comandi.tex}
 \DeclareUnicodeCharacter{2212}{-}
@@ -15,12 +16,6 @@
 
 \newpage
 \tableofcontents
-
-\newpage
-\listoftables
-
-\newpage
-\listoffigures
 
 \newpage
 \section{Introduzione}\label{sec:introduzione}
