--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -2,13 +2,13 @@
 
 \newcommand{\Prodotto}{TODO}
 
-\newcommand{\Approvatore}{TODO}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton \\}
-\newcommand{\Verificatori}{Elvis Murtezan \newline Abdelwahad kandoul \newline Giovanni Grigoletto \newline Andrea De Tomasi \\}
+\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto\\}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin\newline Sweleven}
 
