--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/ClassificazioneDeiDocumenti.tex
@@ -20,7 +20,7 @@ La documentazione esterna è un tipo di documentazione la cui divulgazione sarà
 \end{itemize}
 
 \subsubsection{Stesura dei verbali}
-Ad ogni riunione, un membro del gruppo {\Gruppo} sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta approvato, non è più prevista la possibilità di modifica, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è la seguente:
+Ad ogni riunione, un membro del gruppo {\Gruppo} sarà scelto, a rotazione, come Redattore dello stesso. Per ogni incontro del gruppo verrà prodotto un verbale ad uso, come specificato sopra, solamente interno. Una volta approvato non è più prevista la possibilità di modifica, in quanto richiederebbe una modifica di azioni e/o tecnologie già discusse in sedute precedenti in modo retroattivo. La struttura del verbale è la seguente:
 \begin{itemize}
 	\item luogo svolgimento riunione;
 	\item data svolgimento riunione;
