--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -17,6 +17,8 @@ Gli strumenti con cui si cercherà di perseguire la qualità sopra citata sono:
 	\item le metriche descritte nel PdQ.
 \end{itemize}
 
+\subsection*{**********AGGIUNGERE METRICHE***********}
+
 \subsection{Verifica}
 Con questo processo, il gruppo {\Gruppo} si pone come obiettivo primario lo sviluppo di software e prodotti di qualità, sia a livello di documentazione sia a livello di codice prodotto. Tramite una serie di analisi e test, si assicura che il prodotto finito sarà conforme ad un livello di qualità del tutto accettabile per il soddisfacimento di tutti gli obiettivi prefissati con il committente ed il proponente.
 \subsection{Aspettative della verifica}
@@ -59,11 +61,11 @@ Questi test vengono effettuati con la partecipazione del committente, cui compit
 
 \subsection{Codice identificativo dei test}
 Ogni test prodotto dal gruppo {\Gruppo}, adotterà la seguente nomenclatura:
-\begin{center} \textbf{T[t][x][e]} \end{center}
+\begin{center} \textbf{T[Y][X][E]} \end{center}
 Dove:
 \begin{itemize}
 	\item T è una keyword statica per identificare appunto un “Test”
-	\item t identifica il tipo di test, che può essere:
+	\item Y identifica il tipo di test, che può essere:
 		\begin{itemize}
 			\item U: test di unità;
 			\item I: test di integrazione;
@@ -71,6 +73,6 @@ Dove:
 			\item R: test di regressione;
 			\item A: test di accettazione.
 		\end{itemize}
-		\item x è l'ID univoco e prograssivo utile per identificare il test;
-		\item e identifica l'esito di un test, che può essere positivo o negativo.
+		\item X è l'ID univoco e prograssivo utile per identificare il test;
+		\item E identifica l'esito di un test, che può essere positivo o negativo.
 \end{itemize}
