--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -47,7 +47,7 @@ Tutte le tabelle saranno costruite secondo i seguenti standard:
 \end{itemize}
 
 L’esempio sotto riportato riporta una tabella costruita secondo le disposizioni sopra-descritte:
-
+{
     \rowcolors{2}{\evenRowColor}{\oddRowColor}
     \renewcommand{\arraystretch}{1.5}
     \centering
@@ -60,10 +60,10 @@ L’esempio sotto riportato riporta una tabella costruita secondo le disposizion
         Testo esempio                & Testo esempio                                    & Testo esempio                                   & Testo esempio & Testo esempio{} \\
         Testo esempio                & Testo esempio                                    & Testo esempio                          & Testo esempio & Testo esempio{}    \\
     \end{longtable}
-
+}
 
 \subsubsection{Immagini}
-Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo una organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
+Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo un'organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
 \textbf{N\_nn\_\#\_nomeimg.estensione}\\
 dove:
 \begin{itemize}
@@ -76,5 +76,5 @@ dove:
 Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi UML}
-Ogni diagramma UML inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi UML sarà StarUML o, in alternativa, Draw.IO.
+Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà \glo{StarUML} o, in alternativa, Draw.IO.
 
