--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/Validazione.tex
@@ -6,11 +6,11 @@ Il processo di validazione deve rispettare i seguenti punti:
 \begin{itemize}
 	\item identificazione degli obiettivi da validare;
 	\item identificare ed applicare una strategia di validazione condivisa dal gruppo;
-	\item valutare i risultati ottenuti dal processo di validazione.
+	\item verificare i risultati ottenuti dal processo di validazione.
 \end{itemize}
 
 \subsubsection{Attività}
-Le attività da svolgere per validare il prodotto sono un onere esclusivo del Responsabile di Progetto, e sono le seguenti:
+Le attività da svolgere per approvare il prodotto sono un onere esclusivo del Responsabile di Progetto, e sono le seguenti:
 
 \begin{itemize}
 	\item accettare ed approvare il documento;
