--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
@@ -3,25 +3,22 @@ Il processo di infrastruttura comprende tutte le indicazioni per stabilire e man
 Tale processo prevede i seguenti step:
 
 \begin{enumerate}
-    \item Implementazione del processo
-    \item Istituzione dell'infrastruttura
-    \item Manutenzione dell'infrastruttura
+    \item implementazione del processo;
+    \item istituzione dell'infrastruttura;
+    \item manutenzione dell'infrastruttura.
 \end{enumerate}
 
 \subsubsection{Implementazione del processo}
-
-\myparagraph{}L'infrastruttura deve essere definita e documentata per coniugarsi con i requisiti del processo, considerando le procedure coinvolte, gli standard, la sistemistica e le tecniche di sviluppo e e manutenzione.
-
-\paragraph{} L'istituzione dell'infrastruttura deve essere documentata.
+L'infrastruttura deve essere definita e documentata per coniugarsi con i requisiti del processo, considerando le procedure coinvolte, gli standard, la sistemistica e le tecniche di sviluppo e manutenzione.
 
 \subsubsection{Istituzione dell'infrastruttura}
 
-\myparagraph{}
-La configurazione dell'infrastruttura deve essere pianificata e documentata. I criteri per la scelta della configurazione devono includere le funzionalità a disposizione, le performance, la sicurezza, la disponibilità (in particolare di spazio e di risorse), l'equipaggiamento correlato, i costi. Vanno inoltre considerati i requisiti legati alle tempistiche (correlati alle performance).
+\myparagraph{Configurazione dell'infrastruttura}
+Essa deve essere pianificata e documentata. I criteri per la scelta della configurazione devono includere le funzionalità a disposizione, le performance, la sicurezza, la disponibilità (in particolare di spazio e di risorse), l'equipaggiamento correlato, i costi. Vanno inoltre considerati i requisiti legati alle tempistiche (correlati alle performance).
 
 In particolare l'infrastruttura indicata per il progetto corrente non riguarda prodotti hardware ma si limita ai software associati alle attività in seguito riportate:
 
-\textbf{Comunicazione e meeting}
+\myparagraph{Comunicazione e meeting}
 
 Di seguito  vengono illustrati gli strumenti software per lo svolgimento di riunioni telematiche e le comunicazioni rapide. Nello specifico, le comunicazioni vengono divise in due macrocategorie, ovvero le comunicazioni interne al gruppo e le comunicazioni con enti e persone esterne ad esso.
 
@@ -31,9 +28,9 @@ Di seguito  vengono illustrati gli strumenti software per lo svolgimento di riun
 Per le comunicazioni testuali sono inoltre stati predisposti tre canali testuali interni a tale server:
 
 \begin{itemize}
-    \item Risorse: contiene link a materiale utile finalizzato all'autoapprendimento di eventuali argomenti non noti ai membri del gruppo. Include inoltre vari link ai siti dedicati alla presentazione dei capitolati e  alle specifiche indicate dal professore.
-    \item Generale: canale testuale realizzato di default dalla piattaforma utilizzata, contiene i link ai files generati per i sondaggi interni al gruppo e la tabella delle disponibilità di ogni membro del gruppo. 
-    \item Chat-riunione: contiene i link e i files inviati durante le videoconferenze.
+    \item risorse: contiene link a materiale utile finalizzato all'autoapprendimento di eventuali argomenti non noti ai membri del gruppo. Include inoltre vari link ai siti dedicati alla presentazione dei capitolati e  alle specifiche indicate dal professore;
+    \item generale: canale testuale realizzato di default dalla piattaforma utilizzata, contiene i link ai files generati per i sondaggi interni al gruppo e la tabella delle disponibilità di ogni membro del gruppo;
+    \item chat-riunione: contiene i link e i files inviati durante le videoconferenze.
 \end{itemize}
 
 Per le comunicazioni rapide ed eventuali discussioni o proposte esterne alle riunioni viene utilizzato l'apposito gruppo privato sulla piattaforma di messaggistica istantanea Telegram.
@@ -42,10 +39,9 @@ Per le comunicazioni rapide ed eventuali discussioni o proposte esterne alle riu
 
 /*Da stabilire con l'azienda ed eventualmente il professore in seguito all'assegnazione del capitolato.*/
 
-\textbf{Controllo delle versioni,issue tracking system e memorizzazione remota condivisa}
+\myparagraph{Controllo delle versioni, issue tracking system e memorizzazione remota condivisa}
 
-Per il controllo delle versioni del prodotto sviluppato e la possibilità di memorizzare documenti in una repository remota verrà utilizzato GitHub (si rimanda all'apposita sezione "Classificazione dei documenti" nei processi di supporto).
+Per il controllo delle versioni del prodotto sviluppato e la possibilità di memorizzare documenti in una repository remota verrà utilizzato GitHub (si rimanda all'apposita sezione "Classificazione dei documenti" [sez 3.3] nei processi di supporto).
 
 \subsubsection{Manutenzione dell'infrastruttura}
-
-\myparagraph{}L'infrastruttura deve essere mantenuta, monitorata e modificata se necessario per poter mantenere il requisito di appagamento dei requisiti del processo. Ciò deve dunque includere una definizione del grado di gestione della configurazione.
+L'infrastruttura deve essere mantenuta, monitorata e modificata se necessario per poter mantenere il requisito di appagamento dei requisiti del processo. Ciò deve dunque includere una definizione del grado di gestione della configurazione.
