--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -31,7 +31,7 @@ Ogni documento riporta una sezione denominata come sopracitato, recante una desc
 \end{itemize}
 
 \subsubsection{Indice}
-Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice cui scopo è quello di esplicitare la struttura e le gerarchie del documento in oggetto. 
+Ogni documento prodotto dal gruppo {\Gruppo} contiene, all’inizio dello stesso, un indice il cui scopo è quello di esplicitare la struttura e le gerarchie del documento in oggetto. 
 
 \subsubsection{Elenco immagini}
 I documenti muniti di figure saranno provvisti di un indice delle figure contenute in essi, con una breve descrizione della stessa ed il numero della pagina dove è collocata.
@@ -46,7 +46,7 @@ La struttura delle pagine di contenuto è la seguente:
 \begin{itemize}
 	\item logo: il logo del gruppo è posizionato in alto a sinistra;
 	\item sezione: il nome ed il numero della sezione sono posizionati in centro alla pagina;
-	\item intestazione: è l’intestazione del documento;
+	\item intestazione: è composta dal logo e dalla sezione;
 	\item contenuto: il contenuto principale del documento è posizionato dopo l’intestazione dello stesso;
 	\item nome e versione del documento: presente in basso a sinistra, indica appunto il nome del documento in oggetto e la sua attuale versione di scrittura;
 
