--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiApprendimento.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiApprendimento.tex
@@ -2,27 +2,30 @@
 Il processo di apprendimento riguarda include tutte le specifiche per formare e riqualificare il personale. Tale processo si articola nelle tre fasi seguenti:
 
 \begin{enumerate}
-    \item Implementazione del processo
-    \item Sviluppo del materiale per l'apprendimento
-    \item Implementazione di un piano per l'apprendimento
+    \item implementazione del processo;
+    \item sviluppo del materiale per l'apprendimento;
+    \item implementazione di un piano per l'apprendimento.
 \end{enumerate}
 
-\subsubsection{Implementazione del processo}Tale fase prevede le seguenti azioni:
+\subsubsection{Implementazione del processo}Per tale fase sono consigliate le seguenti azioni:
+\begin{itemize}
+    \item svolgere un'analisi dei requisiti del progetto per stabilire eventuale materiale utile al personale per acquisire o sviluppare le competenze richieste;
+    \item stabilire dei livelli di complessità di apprendimento a seconda della categoria di personale da  formare tramite un piano di apprendimento, il quale deve contenere il riferimento alla categoria di personale per cui è sviluppato e le risorse di cui esso necessita (si consiglia di documentare lo sviluppo di tale piano).
+\end{itemize}
 
-\myparagraph{}\`E consigliato svolgere un'analisi dei requisiti del progetto per stabilire eventuale materiale utile al personale per acquisire o sviluppare le competenze richieste. \`E consigliato stabilire dei livelli di complessità di apprendimento a seconda della categoria di personale da  formare tramite un piano di apprendimento, il quale deve contenere il riferimento alla categoria di personale per cui è sviluppato e le risorse di cui esso necessita (si consiglia di documentare lo sviluppo di tale piano). 
 
 \subsubsection{Sviluppo del materiale per l'apprendimento}
-
-\myparagraph{}Si consiglia lo sviluppo di un manuale per l'apprendimento
+Si consiglia lo sviluppo di un manuale per l'apprendimento.
 
 \subsubsection{Implementazione di un piano per l'apprendimento}
-
-\myparagraph{}Il piano di insegnamento deve essere implementato al fine di formare il personale. Le sessioni di insegnamento devono essere memorizzate.
-
-\myparagraph{}\`E fortemente consigliato assicurare un buon quantitativo di personale competente per le attività pianificate in tempo rapido.
-
-In particolare il gruppo a cui queste norme sono riferite utilizzerà un approccio di apprendimento di tipo individuale e autonomo. Per l'apprendimento autonomo si consiglia:
 \begin{itemize}
-    \item  https://www.sololearn.com/
-    \item eventuali guide e siti ufficiali dell'oggetto di apprendimento
+    \item il piano di insegnamento deve essere implementato al fine di formare il personale. Le sessioni di insegnamento devono essere memorizzate;
+    \item è fortemente consigliato assicurare un buon quantitativo di personale competente per le attività pianificate in tempo rapido.
+    In particolare il gruppo a cui queste norme sono riferite utilizzerà un approccio di apprendimento di tipo individuale e autonomo. Per l'apprendimento autonomo si consiglia:
+    \begin{itemize}
+        \item  https://www.sololearn.com/;
+        \item eventuali guide e siti ufficiali dell'oggetto di apprendimento.
+    \end{itemize}
 \end{itemize}
+
+
