--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -13,22 +13,70 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X  & 
-        XXXX-XX-XX  & 
-        Responsabile & 
-        TODO & 
+        1.0.0  & 
+        2021-01-11  & 
+        Approvazione & 
+        Giovanni Grigoletto & 
         \responsabile{} \\
 
-        0.0.2  & 
-        2021-01-08 & 
-        Verifica & 
-        Abdelwahad Kandoul, Edoardo Caregnato & 
-        \verificatore{} \\
-        
-        0.0.1  & 
+        0.1.1  & 
+        2021-01-09 & 
+        Aggiunti dettagli finali e correzioni & 
+        Elvis Murtezan, Giovanni Grigoletto  & 
+        \redattore{} \\
+
+        0.1.0  & 
         2021-01-05 & 
-        Stesura documento & 
-        Giovanni Grigoletto, Elvis Murtezan  & 
+        Verifica & 
+        Abdelwahad Kandoul, Edoradro Caregato  & 
+        \verificatore{} \\
+
+        0.0.8  & 
+        2021-01-03 & 
+        Aggiunti grafici & 
+        Elvis Murtezan  & 
+        \redattore{} \\
+
+        0.0.7  & 
+        2021-01-03 & 
+        Aggiornato preventivo architettura e preventivo al dettaglio & 
+        Elvis Murtezan  & 
+        \redattore{} \\
+
+        0.0.6  & 
+        2021-01-02 & 
+        Stesura preventivo analisi e consuntivo & 
+        Elvis Murtezan  & 
+        \redattore{} \\
+
+        0.0.5  & 
+        2021-01-02 & 
+        Aggiunta pianificazione & 
+        Giovanni Grigoletto & 
+        \redattore{} \\
+
+        0.0.4  & 
+        2020-12-28 & 
+        Aggiunto organigramma e preventivo parziale & 
+        Elvis Murtezan  & 
+        \redattore{} \\
+
+        0.0.3  & 
+        2020-12-28 & 
+        Aggiunto modello di sviluppo & 
+        Giovanni Grigoletto & 
+        \redattore{} \\
+        
+        0.0.2  & 
+        2020-12-26 & 
+        Aggunta introduzione ed analisi dei rischi & 
+        Giovanni Grigoletto & 
+        \redattore{} \\
+
+        0.0.1  & 
+        2020-12-23 & 
+        Stesura template iniziale & 
+        Giovanni Grigoletto, Elvis Murtezan & 
         \redattore{} \\
     \end{longtable}
 }
