--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -1,13 +1,13 @@
 \newcommand{\Titolo}{Piano di Progetto}
 
-\newcommand{\Approvatore}{TODO}
+\newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto}
 \newcommand{\Verificatori}{Abdelwahad Kandoul \newline Edoardo Caregnato}
 \newcommand{\Responsabile}{}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{0.0.1}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{
 \proponente{} \newline
